# P05

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
model/: ml_model.joblib
sql/: create_tables_p5_rh.sql  extrait_eval_insert.csv  extrait_sirh_insert.csv  extrait_sondage_insert.csv
src/: bdd.py  models.py  predict.py  train.py  utils.py
test/: conftest.py  test_api.py  test_database.py  test_model.py  test_utils.py
